--- a/shop_project/shop_common/src/main/resources/log4j.properties
+++ b/shop_project/shop_common/src/main/resources/log4j.properties
@@ -1,5 +1,5 @@
 #??log4j.properties??
-log4j.rootLogger=INFO,Console,File
+log4j.rootLogger=INFO,Console,File.DEBUG
 log4j.appender.Console=org.apache.log4j.ConsoleAppender
 log4j.appender.Console.Target=System.out
 log4j.appender.Console.layout = org.apache.log4j.PatternLayout
