--- a/shop_project/shop_eureka/pom.xml
+++ b/shop_project/shop_eureka/pom.xml
@@ -28,6 +28,11 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-web</artifactId>
+            <version>5.7.1</version>
+        </dependency>
     </dependencies>
 
     <dependencyManagement>
