--- a/shop_project/shop_eureka/src/main/resources/application.yml
+++ b/shop_project/shop_eureka/src/main/resources/application.yml
@@ -1,16 +1,16 @@
 spring:
   application:
-    name: eureka-service
+    name: shop-eureka
 server:
-  port: 2001    #默认端口 8761
+  port: 8000    #默认端口 8761
 eureka:
   server:
     #禁用保护模式  一般用于测试
     enable-self-preservation: false
   instance:
     # 主机名为了区分集群中不同的服务器
-    hostname: eureka1
+    hostname: localhost
   # 针对单台服务器，不向自己注册，也不从自己拉取。  用于单台配置
   client:
     register-with-eureka: false
-    fetch-registry: true
+    fetch-registry: false
