--- a/shop_project/shop_product/src/main/resources/application.properties
+++ b/shop_project/shop_product/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-server.port=8082
+server.port=8101
 server.servlet.context-path=/
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://127.0.0.1:3306/shop?serverTimezone=Asia/Shanghai&useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull&useSSL=false&allowPublicKeyRetrieval=true
@@ -29,4 +29,6 @@ spring.redis.timeout=0
 
 swagger.enable=true
 spring.application.name=product-server
-eureka.client.service-url.defaultZone=http://localhost:2001/eureka
+eureka.client.service-url.defaultZone=http://localhost:8000/eureka
+eureka.client.lease-renewal-interval-in-seconds: 10
+eureka.client.lease-expiration-duration-in-seconds: 20
