--- a/shop_project/shop_product/src/main/resources/application-cluster1.properties
+++ b/shop_project/shop_product/src/main/resources/application-cluster1.properties
@@ -1,4 +1,6 @@
-server.port=8101
+server.port=8200
+spring.application.name=product-server
+
 server.servlet.context-path=/
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://127.0.0.1:3306/shop?serverTimezone=Asia/Shanghai&useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull&useSSL=false&allowPublicKeyRetrieval=true
@@ -28,7 +30,10 @@ spring.redis.jedis.pool.min-idle=0
 spring.redis.timeout=0
 
 swagger.enable=true
-spring.application.name=product-server
-eureka.client.service-url.defaultZone=http://localhost:8000/eureka
+# ???eureka??
+eureka.client.service-url.defaultZone=http://shop-eureka-node1:8000/eureka,http://shop-eureka-node1:8001/eureka
 eureka.client.lease-renewal-interval-in-seconds: 10
 eureka.client.lease-expiration-duration-in-seconds: 20
+
+spring.cloud.loadbalancer.ribbon.enabled=false
+spring.cloud.loadbalancer.enabled=true
