feature(基础服务): 增加网关服务 增加网关服务，使用getway 进行简单测试及调整业务 规定接口名称规范

--- a/shop_project/pom.xml
+++ b/shop_project/pom.xml
@@ -16,6 +16,7 @@
         <module>shop_user</module>
         <module>shop_eureka</module>
         <module>shop_product</module>
+        <module>shop_getway</module>
     </modules>
 
 
