--- a/shop_project/shop_product/src/main/resources/application-cluster2.properties
+++ b/shop_project/shop_product/src/main/resources/application-cluster2.properties
@@ -30,7 +30,7 @@ spring.redis.jedis.pool.min-idle=0
 spring.redis.timeout=0
 
 swagger.enable=true
-# ???eureka??
+# eureka??
 eureka.client.service-url.defaultZone=http://shop-eureka-node1:8000/eureka,http://shop-eureka-node1:8001/eureka
 eureka.client.lease-renewal-interval-in-seconds: 10
 eureka.client.lease-expiration-duration-in-seconds: 20
