feature(基础修改): 用户服务切换至nacos 用户服务切换至nacos并测试

--- a/shop_project/shop_user/src/main/resources/application-cluster1.properties
+++ b/shop_project/shop_user/src/main/resources/application-cluster1.properties
@@ -32,6 +32,7 @@ swagger.enable=true
 
 
 # ???eureka??
-eureka.client.service-url.defaultZone=http://shop-eureka-node1:8000/eureka,http://shop-eureka-node1:8001/eureka
+spring.cloud.nacos.discovery.server-addr=localhost:8848
+#eureka.client.service-url.defaultZone=http://shop-eureka-node1:8000/eureka,http://shop-eureka-node1:8001/eureka
 eureka.client.lease-renewal-interval-in-seconds: 10
 eureka.client.lease-expiration-duration-in-seconds: 20
