feature(基础服务): 注册中心转为nacos 修改配置文件，注册中心转为nacos

--- a/shop_project/shop_getway/src/main/resources/application.properties
+++ b/shop_project/shop_getway/src/main/resources/application.properties
@@ -14,7 +14,10 @@ spring.cloud.gateway.routes[1].filters[0]=StripPrefix=1
 spring.cloud.gateway.routes[1].filters[1]=Authorize=true
 
 # eureka??
-eureka.client.service-url.defaultZone=http://shop-eureka-node1:8000/eureka,http://shop-eureka-node1:8001/eureka
+spring.cloud.nacos.discovery.server-addr=localhost:8848
+
+# eureka
+#eureka.client.service-url.defaultZone=http://shop-eureka-node1:8000/eureka,http://shop-eureka-node1:8001/eureka
 eureka.client.lease-renewal-interval-in-seconds: 10
 eureka.client.lease-expiration-duration-in-seconds: 20
 
