--- a/shop_project/shop_product/src/main/resources/application-cluster1.properties
+++ b/shop_project/shop_product/src/main/resources/application-cluster1.properties
@@ -31,8 +31,11 @@ spring.redis.timeout=0
 
 
 swagger.enable=true
+
+spring.cloud.nacos.discovery.server-addr=localhost:8848
+
 # eureka
-eureka.client.service-url.defaultZone=http://shop-eureka-node1:8000/eureka,http://shop-eureka-node1:8001/eureka
+#eureka.client.service-url.defaultZone=http://shop-eureka-node1:8000/eureka,http://shop-eureka-node1:8001/eureka
 eureka.client.lease-renewal-interval-in-seconds: 10
 eureka.client.lease-expiration-duration-in-seconds: 20
 
