feature(基础服务): 注册中心转为nacos 修改配置文件，注册中心转为nacos,调试完成

--- a/shop_project/shop_getway/pom.xml
+++ b/shop_project/shop_getway/pom.xml
@@ -39,6 +39,17 @@
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-loadbalancer</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.alibaba.cloud</groupId>
+            <artifactId>spring-cloud-starter-alibaba-nacos-discovery</artifactId>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.springframework.cloud</groupId>
+                    <artifactId>spring-cloud-starter-netflix-ribbon</artifactId>
+                </exclusion>
+            </exclusions>
+            <version>2.2.1.RELEASE</version>
+        </dependency>
 
     </dependencies>
     <!--新增-->
