--- a/shop_project/pom.xml
+++ b/shop_project/pom.xml
@@ -141,6 +141,12 @@
         <dependency>
             <groupId>com.alibaba.cloud</groupId>
             <artifactId>spring-cloud-starter-alibaba-nacos-discovery</artifactId>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.springframework.cloud</groupId>
+                    <artifactId>spring-cloud-starter-netflix-ribbon</artifactId>
+                </exclusion>
+            </exclusions>
             <version>2.2.2.RELEASE</version>
         </dependency>
         <dependency>
