--- a/shop_project/shop_product/src/main/resources/bootstrap.properties
+++ b/shop_project/shop_product/src/main/resources/bootstrap.properties
@@ -1,7 +1,7 @@
-spring.application.name=gateway-server
+spring.application.name=product-server
 spring.cloud.nacos.config.server-addr=127.0.0.1:8848
 #????????ID?????????
-spring.cloud.nacos.config.namespace=57a2f629-dc51-4d20-a590-a7e6d4e87ea2
+spring.cloud.nacos.config.namespace=2a9226ae-3bd5-4970-9c87-24f60b95bea0
 #???Group??????Group???????group??????
 spring.cloud.nacos.config.group=dev
 #?????????
