feature(es): 增加es集成 增加es服务以提供es对外功能

--- a/shop_project/pom.xml
+++ b/shop_project/pom.xml
@@ -17,6 +17,7 @@
         <module>shop_eureka</module>
         <module>shop_product</module>
         <module>shop_getway</module>
+        <module>shop_es</module>
     </modules>
 
 
