feature(file):增加文件服务项目 增加文件服务项目

--- a/shop_project/pom.xml
+++ b/shop_project/pom.xml
@@ -18,6 +18,7 @@
         <module>shop_product</module>
         <module>shop_getway</module>
         <module>shop_es</module>
+        <module>shop_file</module>
     </modules>
 
 
