--- a/shop_project/pom.xml
+++ b/shop_project/pom.xml
@@ -19,6 +19,7 @@
         <module>shop_getway</module>
         <module>shop_es</module>
         <module>shop_file</module>
+        <module>shop_task</module>
     </modules>
 
 
