--- a/shop_project/pom.xml
+++ b/shop_project/pom.xml
@@ -26,7 +26,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>3.0.5</version>
+        <version>2.5.5</version>
         <relativePath/>
     </parent>
 
@@ -135,8 +135,8 @@
         </dependency>
         <dependency>
             <groupId>org.redisson</groupId>
-            <artifactId>redisson-spring-data-21</artifactId>
-            <version>3.14.0</version>
+            <artifactId>redisson</artifactId>
+            <version>3.27.2</version>
         </dependency>
 
         <!-- spring cloud -->
