--- a/shop_project/shop_getway/pom.xml
+++ b/shop_project/shop_getway/pom.xml
@@ -64,7 +64,10 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-redis</artifactId>
         </dependency>
-
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>jcl-over-slf4j</artifactId>
+        </dependency>
 
 
     </dependencies>
