--- a/shop_project/pom.xml
+++ b/shop_project/pom.xml
@@ -136,8 +136,8 @@
         </dependency>
         <dependency>
             <groupId>org.redisson</groupId>
-            <artifactId>redisson</artifactId>
-            <version>3.27.2</version>
+            <artifactId>redisson-spring-boot-starter</artifactId>
+            <version>3.17.5</version>
         </dependency>
 
         <!-- spring cloud -->
@@ -188,6 +188,12 @@
             <groupId>org.openjdk.jol</groupId>
             <artifactId>jol-core</artifactId>
             <version>0.10</version>
+        </dependency>
+
+        <dependency>
+            <groupId>p6spy</groupId>
+            <artifactId>p6spy</artifactId>
+            <version>3.9.1</version>
         </dependency>
 
     </dependencies>
