--- a/shop_project/shop_user/pom.xml
+++ b/shop_project/shop_user/pom.xml
@@ -28,7 +28,37 @@
             <groupId>org.springframework</groupId>
             <artifactId>spring-beans</artifactId>
         </dependency>
+        <!-- Drools 核心依赖 -->
+        <dependency>
+            <groupId>org.drools</groupId>
+            <artifactId>drools-core</artifactId>
+            <version>7.73.0.Final</version>
+        </dependency>
+        <dependency>
+            <groupId>org.drools</groupId>
+            <artifactId>drools-compiler</artifactId>
+            <version>7.73.0.Final</version>
+        </dependency>
+        <!-- 关键：添加缺失的 MVEL 支持 -->
+        <dependency>
+            <groupId>org.drools</groupId>
+            <artifactId>drools-mvel</artifactId>
+            <version>7.73.0.Final</version>
+        </dependency>
 
+        <!-- KIE API -->
+        <dependency>
+            <groupId>org.kie</groupId>
+            <artifactId>kie-api</artifactId>
+            <version>7.73.0.Final</version>
+        </dependency>
+
+        <!-- Spring 集成支持 -->
+        <dependency>
+            <groupId>org.kie</groupId>
+            <artifactId>kie-spring</artifactId>
+            <version>7.73.0.Final</version>
+        </dependency>
     </dependencies>
 
     <build>
