增加规则引擎

--- a/shop_project/shop_user/src/main/resources/spy.properties
+++ b/shop_project/shop_user/src/main/resources/spy.properties
@@ -12,7 +12,7 @@ appender=com.p6spy.engine.spy.appender.StdoutLogger
 #appender=com.p6spy.engine.spy.appender.Slf4JLogger
 
 #??
-logMessageFormat=com.p6spy.engine.spy.appender.CustomLineFormat
+logMessageFormat=com.example.shop_common.utils.SqlFormatUtil
 customLogMessageFormat=%(currentTime) | SQL spend-time: %(executionTime) ms | connection-info: %(category)-%(connectionId) | execute-sql: %(sql)
 
 # ?? p6spy driver ??
